# kodo

./: .gitignore  AUDIT_REPORT.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  UNSAFE_AUDIT.md  clippy.toml  deny.toml
crates/kodo_ast/: Cargo.toml
crates/kodo_ast/src/: lib.rs
crates/kodo_ast/tests/: ast_tests.rs
crates/kodo_codegen/: Cargo.toml
crates/kodo_codegen/benches/: codegen_bench.rs
crates/kodo_codegen/src/: builtins.rs  function.rs  instruction.rs  layout.rs  lib.rs  module.rs  terminator.rs  value.rs
crates/kodo_codegen/tests/: builtins_tests.rs  closure_codegen_tests.rs  instruction_extended.rs  instruction_tests.rs  proptest.rs  terminator_tests.rs  value_tests.rs
crates/kodo_codegen_llvm/: Cargo.toml
crates/kodo_codegen_llvm/src/: builtins.rs  emitter.rs  function.rs  instruction.rs  lib.rs  terminator.rs  types.rs  value.rs
crates/kodo_codegen_llvm/src/inkwell_backend/: builtins.rs  compiler.rs  instruction.rs  mod.rs  terminator.rs  types.rs  value.rs
crates/kodo_contracts/: Cargo.toml
crates/kodo_contracts/src/: lib.rs  smt.rs
crates/kodo_contracts/tests/: proptest_smt.rs  refinement_tests.rs
crates/kodo_desugar/: Cargo.toml
crates/kodo_desugar/src/: expr.rs  for_loop.rs  lib.rs  operators.rs  stmt.rs
crates/kodo_desugar/tests/: proptest.rs
crates/kodo_lexer/: Cargo.toml
crates/kodo_lexer/benches/: lexer_bench.rs
crates/kodo_lexer/proptest-regressions/: lib.txt
crates/kodo_lexer/src/: lib.rs
crates/kodo_lexer/tests/: proptest.rs  snapshots.rs
crates/kodo_lexer/tests/snapshots/: snapshots__snapshot_contracts.snap  snapshots__snapshot_expressions.snap  snapshots__snapshot_hello.snap  snapshots__snapshot_minimal.snap
crates/kodo_lsp/: Cargo.toml
crates/kodo_lsp/src/: actions.rs  completion.rs  diagnostics.rs  format.rs  goto.rs  hover.rs  lib.rs  rename.rs  signature.rs  symbols.rs  utils.rs
crates/kodo_lsp/src/snapshots/: kodo_lsp__completion__tests__snapshot_completion_labels_for_simple_module.snap  kodo_lsp__completion__tests__snapshot_enum_variant_completions.snap  kodo_lsp__diagnostics__tests__snapshot_diagnostics_for_missing_meta.snap  kodo_lsp__diagnostics__tests__snapshot_diagnostics_for_parse_error.snap  kodo_lsp__hover__tests__snapshot_hover_enum_definition.snap  kodo_lsp__hover__tests__snapshot_hover_function_with_contracts_and_annotations.snap  kodo_lsp__hover__tests__snapshot_hover_param_type.snap  kodo_lsp__hover__tests__snapshot_hover_struct_definition.snap  kodo_lsp__symbols__tests__snapshot_document_symbols.snap  kodo_lsp__utils__tests__snapshot_format_type_expr_nested_generic.snap  kodo_lsp__utils__tests__snapshot_format_type_nested.snap
crates/kodo_mcp/: Cargo.toml
crates/kodo_mcp/src/: lib.rs  main.rs  tools.rs
crates/kodo_mir/: Cargo.toml
crates/kodo_mir/src/: lib.rs  lowering.rs  optimize.rs  yield_insertion.rs
crates/kodo_mir/src/lowering/: builder.rs  control.rs  expr.rs  mod.rs  pattern.rs  registry.rs  stmt.rs  tests.rs  validator.rs
crates/kodo_mir/tests/: closure_tests.rs  optimize_tests.rs  proptest_lowering.rs  snapshots.rs
crates/kodo_mir/tests/snapshots/: snapshots__snapshot_mir_if_else.snap  snapshots__snapshot_mir_simple_return.snap  snapshots__snapshot_mir_while_loop.snap
crates/kodo_parser/: Cargo.toml
crates/kodo_parser/benches/: parser_bench.rs
crates/kodo_parser/src/: decl.rs  error.rs  expr.rs  lib.rs  module.rs  pattern.rs  stmt.rs  tests.rs  types.rs
crates/kodo_parser/src/snapshots/: kodo_parser__tests__snapshot_tests__snapshot_closure_no_params.snap  kodo_parser__tests__snapshot_tests__snapshot_closure_with_params.snap  kodo_parser__tests__snapshot_tests__snapshot_enum_decl.snap  kodo_parser__tests__snapshot_tests__snapshot_error_missing_brace.snap  kodo_parser__tests__snapshot_tests__snapshot_error_missing_module_keyword.snap  kodo_parser__tests__snapshot_tests__snapshot_error_unexpected_eof.snap  kodo_parser__tests__snapshot_tests__snapshot_function_with_params_and_return.snap  kodo_parser__tests__snapshot_tests__snapshot_if_else.snap  kodo_parser__tests__snapshot_tests__snapshot_let_bindings.snap  kodo_parser__tests__snapshot_tests__snapshot_match_expression.snap  kodo_parser__tests__snapshot_tests__snapshot_nested_if_else.snap  kodo_parser__tests__snapshot_tests__snapshot_simple_module.snap  kodo_parser__tests__snapshot_tests__snapshot_struct_decl.snap  kodo_parser__tests__snapshot_tests__snapshot_while_loop.snap
crates/kodo_parser/tests/: proptest.rs  refinement_tests.rs  snapshots.rs
crates/kodo_playground/: Cargo.toml
crates/kodo_playground/src/: lib.rs
crates/kodo_resolver/: Cargo.toml
crates/kodo_resolver/src/: error.rs  format.rs  helpers.rs  lib.rs  tests.rs
crates/kodo_resolver/tests/: proptest.rs
crates/kodo_runtime/: Cargo.toml
crates/kodo_runtime/src/: channel_generic.rs  closure_ops.rs  collections.rs  context.rs  db.rs  enum_ops.rs  green.rs  helpers.rs  http.rs  io_ops.rs  lib.rs  math_ops.rs  memory.rs  prop_ops.rs  regex_ops.rs  scheduler.rs  server.rs  signal.rs  string_ops.rs  test_ops.rs
crates/kodo_runtime/tests/: collection_edge_cases.rs  io_tests.rs  string_edge_cases.rs
crates/kodo_types/: Cargo.toml
crates/kodo_types/benches/: types_bench.rs
crates/kodo_types/src/: builtins.rs  checker.rs  confidence.rs  errors.rs  expr.rs  generics.rs  lib.rs  ownership.rs  repair.rs  stmt.rs  tests.rs  types.rs
crates/kodo_types/tests/: fix_patch_tests.rs  property_tests.rs  snapshots.rs
crates/kodoc/: Cargo.toml  build.rs
crates/kodoc/src/: ai_annotate.rs  annotate.rs  audit.rs  certificate.rs  dep_resolver.rs  diagnostics.rs  embedded_runtime.rs  explanations.rs  formatter.rs  lockfile.rs  main.rs  manifest.rs  repl.rs  sarif.rs  self_hosted.rs
crates/kodoc/tests/: cli_commands.rs  e2e_tests.rs  integration.rs  kotest_integration.rs  ui_tests.rs
crates/kotest/: Cargo.toml
crates/kotest/src/: compare.rs  directives.rs  main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_lexer.rs  fuzz_parser.rs
tools/ko/: Cargo.toml
tools/ko/src/: main.rs
(+758 files in other folders)
