[package]
name = "kodo_codegen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Code generation backend (Cranelift) for the Kōdo compiler"

[dependencies]
kodo_mir.workspace = true
kodo_types.workspace = true
thiserror.workspace = true
cranelift-codegen.workspace = true
cranelift-frontend.workspace = true
cranelift-module.workspace = true
cranelift-native.workspace = true
cranelift-object.workspace = true
kodo_ast.workspace = true

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true

[[bench]]
name = "codegen_bench"
harness = false
