[package]
name = "kodo_lexer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Lexer/tokenizer for the Kōdo language, powered by logos"

[dependencies]
kodo_ast.workspace = true
logos.workspace = true
thiserror.workspace = true

[dev-dependencies]
insta.workspace = true
proptest.workspace = true
criterion.workspace = true

[[bench]]
name = "lexer_bench"
harness = false
