[package]
name = "kodo_lsp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Language Server Protocol implementation for the Kōdo programming language"

[dependencies]
kodo_ast = { workspace = true }
kodo_parser = { workspace = true }
kodo_types = { workspace = true }
tower-lsp = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
