[package]
name = "kodo_mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "MCP (Model Context Protocol) server for the Kōdo compiler — enables AI agents to interact natively with Kōdo"

[dependencies]
kodo_ast.workspace = true
kodo_lexer.workspace = true
kodo_parser.workspace = true
kodo_types.workspace = true
kodo_contracts.workspace = true
kodo_resolver.workspace = true
kodo_mir.workspace = true
kodo_codegen.workspace = true
kodo_std.workspace = true
kodo_desugar.workspace = true

serde.workspace = true
serde_json.workspace = true

[[bin]]
name = "kodo-mcp"
path = "src/main.rs"
