[package]
name = "kodo_mir"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Mid-level intermediate representation for the Kōdo compiler"

[dependencies]
kodo_ast.workspace = true
kodo_types.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
insta.workspace = true
