[package]
name = "kodo_parser"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Recursive descent LL(1) parser for the Kōdo language"

[dependencies]
kodo_ast.workspace = true
kodo_lexer.workspace = true
thiserror.workspace = true

[dev-dependencies]
insta.workspace = true
proptest.workspace = true
criterion.workspace = true

[[bench]]
name = "parser_bench"
harness = false
