[package]
name = "kodo_runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Runtime support library for compiled Kōdo programs (staticlib)"

[dependencies]
ureq = "3"
serde_json = "1"
tiny_http = "0.12"
fastrand = "2"
rusqlite = { version = "0.31", features = ["bundled"] }

[lib]
crate-type = ["staticlib", "rlib"]
