[package]
name = "kodo_types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Type system and type checker for the Kōdo language"

[dependencies]
kodo_ast.workspace = true
thiserror.workspace = true
strsim.workspace = true

[dev-dependencies]
insta.workspace = true
kodo_parser.workspace = true
criterion.workspace = true

[[bench]]
name = "types_bench"
harness = false
