[package]
name = "ko"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Build tool for the Kōdo language"

[[bin]]
name = "ko"
path = "src/main.rs"

[dependencies]
clap.workspace = true
serde.workspace = true
toml.workspace = true
